--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
+
 <head>
     <meta charset="UTF-8">
-</head>
-<body>
-    <h1>Popup</h1>
     <script src="popup.js"></script>
+    <link rel="stylesheet" href="popup.css">
+</head>
+
+<body>
+    <div id="title">
+        <h1>Time-tracker</h1>
+    </div>
 </body>
+
 </html>
