--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <script src="popup.js"></script>
+    <script src="src/popup.js"></script>
     <link rel="stylesheet" href="popup.css">
 </head>
 
