--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,10 @@
 
 <body>
     <div id="title">
-        <h1>Time-tracker</h1>
+        <h1>tab-tracker</h1>
+    </div>
+    <div id="main">
+
     </div>
 </body>
 
